# camena-control

./: .gitignore  CODE_REVIEW_REPORT.md  HARDWARE_SOFTWARE_COMPATIBILITY_REPORT.md  ORBBEC_CAMERA_SUPPORT_STATUS.md  ORBBEC_MIGRATION_FINAL_SUMMARY.md  PROJECT_COMPLETE_GUIDE.md  README.md  SECURITY_AUDIT_REPORT.md  md13.md
jetson/: .env.example  DEPLOYMENT_GUIDE.md  JETSON_DEPLOYMENT_GUIDE.md  JETSON_PYTHON39_INSTALL.md  PYTHON_MULTI_VERSION.md  PYTHON_VERSION.md  QUICKSTART_ONNX.md  README.md  cleanup.sh  deploy.bat  deploy.sh  main.py  pyproject.toml  pytest.ini  requirements-jetson.txt  requirements.txt  相机位控系统部署操作手册.md
jetson/config/: monitoring.yaml  remote_access.yaml  system_config.yaml
jetson/docs/: MODEL_SETUP.md  MONITORING.md  MONITORING_QUICK_START.md  ONNX_RUNTIME_IMPLEMENTATION_SUMMARY.md  ONNX_RUNTIME_USAGE_GUIDE.md  ORBBEC_MIGRATION_PLAN.md  ORBBEC_SETUP.md  PROJECT_INSPECTION_AND_FIX_REPORT.md  REMOTE_ACCESS.md  TENSORRT_PYTHON_COMPATIBILITY_SOLUTION.md
jetson/docs/archive/: TASK_13_SUMMARY.md  TASK_MONITORING_SUMMARY.md  TEST_SUMMARY.md
jetson/examples/: monitoring_example.py  remote_access_example.py
jetson/scripts/: annotate.py  benchmark_detector.py  convert_to_onnx.py  model_setup.py  setup_face_recognition.py  test_onnx_support.py
jetson/src/: __init__.py
jetson/src/backup/: __init__.py  cloud_backup.py
jetson/src/camera/: __init__.py  base_controller.py  controller.py  depth_processor.py  factory.py  orbbec_controller.py  (+1 more)
jetson/tests/: test_camera_factory.py  test_camera_properties.py  test_control_properties.py  test_e2e.py  test_face_recognition_properties.py  test_integration.py  test_monitoring_properties.py  test_motion_properties.py  test_orbbec_controller.py  test_orbbec_integration.py  test_protocol_properties.py  test_safety_properties.py  test_scheduler_properties.py  test_state_properties.py  test_unit_converter.py  test_vision_properties.py  test_visual_servo_properties.py  test_web_interface.py
(+128 files in other folders)
